<resources>
    <string name="app_name">AppDoc</string>
    <string name="title_activity_nav">@string/app_name</string>
    <string name="google_web_client_ID">715779193042-u74d3rvktv4bba2pprqkakqdugigh57t.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_login">Login</string>
    <string name="start_test">Start Test</string>
    <string name="nothing">Nothing</string>
    <string name="AppDoc_login_greeting">Please sign in to enjoy the AppDoc experience!</string>
    <string name="enter_email_request">Please enter your email</string>
    <string name="enter_password_request_login">Please enter your password.</string>
    <string name="enter_password_request_sign_up">Please enter a password.</string>
    <string name="invalid_email">Invalid email address.</string>
    <string name="password_longer">Password must be longer than 6 characters</string>
    <string name="password_does_not_match">Password does not match password on file. Try Again.</string>
    <string name="server_error">Unable to reach server. Please check internet connection and try again.</string>
    <string name="google_sign_in_failed">Google sign in failed.</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading…</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_email_sent">Password reset email sent!</string>
    <string name="forgot_email_failed">Password reset email failed.</string>
    <string name="colour_test_instructions_title">Before you begin the colour test, here are some important instructions:</string>
    <string name="colour_test_instructions">1. Hold your device about a foot away from your eyes. \n2. Make sure you are
        in a mild lightning environment, without any glare. \n3. Try to Identify the number or colour line on the plate
        within a few seconds. Select the best option from the buttons displayed at the bottom of the screen. Note: if
        you see nothing or the answer you think is correct is not displayed tap the “Nothing” button. In a few cases
        it is the correct answer. \n4. After tapping on one of the answers a next button will appear, it will take you to
        the next plate. \n5. Once you have completed the test, we will provide you with your score and some next steps.
        \n6. If you are satisfied with the app please share it!</string>
    <string name="color_test_line_desc">What colour line do you see?</string>
    <string name="color_test_number_desc">What number do you see?</string>
    <string name="colour_test_completed">Colour Test Completed</string>
    <string name="colour_test_score">Your score was: </string>
    <string name="colour_test_diagnostic_red_green">We think you may be red-green colour deficient. To undergo a more
        accurate test, make an appointment with an optometrist. If you currently don\'t have one click below to find an
        optometrist near you."</string>
    <string name="colour_test_diagnostic_total">Your test revealed that you may be colorblind. To undergo a more
        accurate test, make an appointment with an optometrist. If you currently don\'t have one click below to find an
        optometrist near you.</string>
    <string name="colour_test_diagnostic_perfect">Our test shows that you are not color blind. Although, it never hurts
        to get a second opinion. To undergo a more accurate test, make an appointment with an optometrist. If you currently
        don\'t have one click below to find an optometrist near you.</string>
    <string name="title_activity_hearing_test">HearingTestActivity</string>
    <string name="find_an_optometrist">Find an Optometrist</string>
    <string name="forget_share">Don\'t Forget to Share</string>
    <string name="share">Share</string>
    <string name="hearing_test_instructions_title">Before you begin the hearing test, here are some important instructions:</string>
    <string name="hearing_Test_instructions">1. Click \"Play\" to play the audio file.\n2. If you hear the audio, select
        \"Yes\" which will appear once the audio is played. If you do not, select \"No\".\n3. Feel free to select
        \"Stop\" at any time while the audio is being played.\n5. Once you have completed the test, we will provide
        you with your score and some next steps.\n6. If you are satisfied with the app please share
        it!\n\n<b>NOTICE: The test has set your volume to the recommended 100%. If you wish to alter your volume you
            may do so. The minimum recommended volume is 75%.</b></string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="eye_test_instructions_title">Before you begin the eye test, here are some important instructions:</string>
    <string name="eye_test_instructions">1. Start this test by covering your left eye. We will inform you when you should switch to your right eye.\n2. This test works by rotating the letter \"E\", your job is to determine which way it is pointing by selecting the correct arrow button.\n3. Once you tap an arrow button another letter will load.\n4. Once you are finished we will show you your results.\n5. If you are satisfied with the app please share
        it!</string>
    <string name="eye_test_up"> &#x2191; </string>
    <string name="eye_test_down"> &#x2193; </string>
    <string name="eye_test_left"> &#x2190; </string>
    <string name="eye_test_right"> &#x2192; </string>
    <string name="eye_test_completed">Eye Test Completed</string>
    <string name="eye_test_alert_button">Alright, Let\'s Go</string>
    <string name="eye_test_alert_start">To start, make sure your left eye is covered. Now hold your phone out as far as you can and choose the arrow button that matches what way the \"E\" is pointed.</string>
    <string name="eye_test_alert_next">Nice work! Now cover your right eye.</string>
    <string name="eye_test_result_excellent">Your eyes look excellent as far as we can tell. But, it never hurts to get an opinion from a trained professional. Click below to find an optometrist near you.</string>
    <string name="eye_test_result_good">You did well on the test, but not perfect. We recommend that you visit an optometrist near you.</string>
    <string name="eye_test_result_ok">Your eyes seem to be OK, but they could be much better with corrective lenses. Click below to find an optometrist near you.</string>
    <string name="eye_test_result_not_good">Your results are not great. We think it would be best if you made an appointment with a trained professional as soon as possible. Click below to find an optometrist near you.</string>
    <string name="eye_test_result_poor">Unfortunately you failed our test. We think it would be best if you made an appointment with a trained professional immediately. Click below to find an optometrist near you.</string>
    <string name="storage">No storage available to save document</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable Notifications</string>
    <string name="pref_description_social_recommendations">Getting Notifications on your device.
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="help_home_title">Home</string>
    <string name="help_home_text">It was our goal to make the Home Page as user-friendly as possible. Simply select one of the test you would like to complete and it will initiate.</string>
    <string name="help_navigation_title">Navigation Bar</string>
    <string name="help_navigation_text">Layout a walkway, with visible start and end point, and measure the walkway length. Have the person stand at the start point, facing along the walkway.</string>
    <string name="help_navbar_list">1. Selecting \'Home\' returns you to the Home Screen \n2. Selecting \'Results\' take you to the Results page \n3. Selecting \'Help\' brought you here! \n4. Selecting \'Sign Out\' signs you out of you Account, for more information see Account</string>
    <string name="help_hearing">1. Select the Hearing Test button to begin a new test. \n2. Read pre-test instructions carefully and understand that your volume will be set to max when running the test. \n3. Once the countdown has completed, press the button to begin the test. \n4. Press \'Play\' to hear a sound (be weary of using in public spaces). Click yes or no if you heard it or not. \n5. Once the test is complete, press the back button to return to the menu. </string>
    <string name="help_colour">1. Select the Colour Test button from the home screen to begin a new test. \n2. Read all pre-test instructions, ensure you understand test instructions. \n3. Look at the image shown and select the best option based on the question provided. \n4. Once the test is complete, press the back button to return to home screen.</string>
    <string name="help_sight">1. Select the Eye Test button from the home screen to begin a new test. \n2. Read all pre-test instructions, ensure you understand test instructions. \n3. Extend your arm out fully and press begin. \n4. Observe rotation of the letter \'E\' and press arrow based on its rotation. \n5. Once the test is complete, press the back button to return to home screen.</string>
    <string name="help_results">1. Open navigation menu and select \'Results\' option. \n2. To view different results, use menu at the bottom of the screen. \n3. To export as a PDF for future reference, press the \'Generate PDF\' button at the top of the screen to save a PDF copy to your device files.</string>
    <string name="help_hearing_title">Hearing Test</string>
    <string name="help_color_title">Color Test</string>
    <string name="help_eye_title">Eye Test</string>
    <string name="help_results_title">Results</string>
    <string name="help_developer_notes_title">Developer Comments</string>
    <string name="help_notes_text">AppDoc allows you to test your hearing, visual acuity, and colour vision. Our goal was to make it easier for people to check their eyes, color vision and hearing in one app.</string>
    <string name="help_notes_text2">References:\nHearing Test Data: http://onlinetonegenerator.com/hearingtest-results.html\nColour Test Data: http://www.colour-blindness.com/colour-blindness-tests/ishihara-colour-test-plates/\nEyesight Test Data: https://www.essilor.com/en/vision-tests/test-your-vision/</string>
</resources>