<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:maxWidth="50dp"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/ic_remove_red_eye_white_48dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:id="@+id/eye_test_dialog_text"
        android:text="@string/eye_test_alert_start"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eye_test_dialog_button"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/eye_test_alert_button"/>
</LinearLayout>