<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.nicksalt.appdoc.AndroidHelpActivity"
    tools:showIn="@layout/activity_android_help">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:text="@string/help_home_title"
                android:textSize="20sp"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home"
                android:paddingBottom="0dp"
                android:paddingEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_home_text"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:id="@+id/nav_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_text"
                android:paddingBottom="4dp"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:text="@string/help_navigation_title"
                android:textSize="20sp"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="103dp" />

            <TextView
                android:id="@+id/nav_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_bar"
                android:paddingBottom="0dp"
                android:paddingEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_navigation_text"
                android:textSize="14sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="150dp" />

            <ImageView
                android:id="@+id/navbar_image"
                android:layout_width="200dp"
                android:layout_height="350dp"
                android:layout_below="@+id/nav_bar_text"
                android:layout_centerHorizontal="true"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:src="@drawable/navbar"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="206dp" />

            <TextView
                android:id="@+id/nav_bar_list"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/navbar_image"
                android:paddingEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_navbar_list"
                android:textSize="14sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="483dp" />

            <TextView
                android:id="@+id/hearing_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_bar_list"
                android:paddingBottom="4dp"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:text="@string/help_hearing_title"
                android:textSize="20sp"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="103dp" />

            <TextView
                android:id="@+id/hearing_test_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hearing_test"
                android:paddingBottom="16dp"
                android:paddingEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_hearing"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:id="@+id/color_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hearing_test_text"
                android:paddingBottom="4dp"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:text="@string/help_color_title"
                android:textSize="20sp"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="103dp" />

            <TextView
                android:id="@+id/color_test_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/color_test"
                android:paddingBottom="16dp"
                android:paddingEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_colour"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:id="@+id/eye_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/color_test_text"
                android:paddingBottom="4dp"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:text="@string/help_eye_title"
                android:textSize="20sp"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="103dp" />

            <TextView
                android:id="@+id/eye_test_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eye_test"
                android:paddingBottom="16dp"
                android:paddingEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_sight"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:id="@+id/results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eye_test_text"
                android:paddingBottom="4dp"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:text="@string/help_results_title"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/results_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/results"
                android:paddingBottom="32dp"
                android:paddingEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_results"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="47dp" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/results_text"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/developer_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:paddingBottom="4dp"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:text="@string/help_developer_notes_title"
                android:textSize="20sp"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="103dp" />
            <TextView
                android:id="@+id/developer_notes_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/developer_notes"
                android:paddingBottom="16dp"
                android:paddingEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_notes_text"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:id="@+id/developer_notes_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingBottom="16dp"
                android:layout_below="@id/developer_notes_text3"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:text="@string/help_notes_text2"
                android:textSize="10sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="47dp" />



        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
